# Kinexin-Deco

./: .gitignore  PKGBUILD  README.md
kinexin-deco-kwin/: CMakeLists.txt  metadata.json
kinexin-deco-kwin/src/: kinexinbutton.cpp  kinexinbutton.h  kinexindecoration.cpp  kinexindecoration.h  plugin.cpp
kinexin-deco-kwin/src/kcm/: configwidget.cpp  configwidget.h  kcm_kinexindecoration.json
